# sdsforge

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  README_ja.md  README_zh.md
.github/workflows/: ci.yml  python-wheels.yml  release.yml
docs/: comparison.md  migration-from-sdsconv.md  quality-check.md  quality-check_ja.md  quality-check_zh.md  sdsforge-architecture.md
docs/experiments/: assist_v1_section4_pilot.md  section4_pilot_expected_values.md
docs/experiments/section4_pilot_raw_outputs/: doc-a_assist_proposals.json  doc-b_assist_proposals.json  doc-c_assist_proposals.json
examples/: causasv_quality_analysis.py
examples/generate/: README.md  example_cleaner.yaml
examples/mhlw_allyl_chloride/: README.md  convert.py  test_fixture.py
sds_converter/: Cargo.toml  README.md  README_ja.md  README_zh.md
sds_converter/src/: app.rs  config.rs  main.rs  tasks.rs
sds_converter_core/: Cargo.toml  README.md  README_ja.md  README_zh.md
sds_converter_core/src/: country.rs  enrichment.rs  error.rs  ghs_codes.rs  language.rs  lib.rs
sds_converter_core/src/converter/: extractor.rs  generator.rs  html.rs  llm.rs  mod.rs  template.rs  validator.rs
sds_converter_core/src/schema/: generated.rs  mod.rs
sds_converter_server/: Cargo.toml
sds_converter_server/src/: main.rs
sdsconv/: Cargo.toml  README.md  README_ja.md  README_zh.md  build.rs
sdsconv/src/: app.rs  config.rs  evidence.rs  main.rs  tasks.rs
sdsconv/tests/: compat.rs
sdsconv_core/: Cargo.toml  README.md  README_zh.md  build.rs
sdsconv_core/src/: lib.rs
sdsconv_core/src/converter/: generator.rs  llm.rs  pdf.rs
sdsconv_py/: Cargo.toml  README.md  pyproject.toml
sdsconv_py/python/sdsconv/: causasv_bridge.py  eval.py
sdsconv_py/sdsconv/: __init__.py  causasv_bridge.py  eval.py
sdsconv_py/src/: lib.rs
sdsconv_server/: Cargo.toml
sdsconv_server/src/: main.rs
sdsforge/: Cargo.toml  README.md  README_ja.md  README_zh.md
sdsforge/src/: app.rs  config.rs  lib.rs  main.rs  tasks.rs
sdsforge/tests/: assist.rs  cli.rs  generate.rs  generate_golden.rs
sdsforge/tests/fixtures/generate_golden/: aqueous_mixture_evidence.expected_official_sds.json  aqueous_mixture_evidence.yaml  blocked_invalid_cas.expected_official_sds.json  blocked_invalid_cas.yaml  single_substance_ethanol.expected_official_sds.json  single_substance_ethanol.yaml
sdsforge_core/: Cargo.toml  README.md  README_ja.md  README_zh.md
sdsforge_core/src/: assist.rs  enrichment.rs  ghs_codes.rs  lib.rs
sdsforge_core/src/converter/: compliance.rs  corrector.rs  generator.rs  html.rs  llm.rs  mod.rs  pdf.rs  validator.rs
sdsforge_core/src/generation/: artifacts.rs  draft.rs  evidence.rs  input.rs  mod.rs  provenance.rs  resolve.rs  result.rs  unresolved.rs  validate.rs
sdsforge_core/src/normalize/: chematic_impl.rs  mod.rs
sdsforge_core/tests/: assist_golden.rs  generate_golden.rs  pubchem_live.rs
sdsforge_core/tests/fixtures/generate_golden/: salt_sodium_chloride.expected_official_sds.json
sdsforge_py/: .gitignore  Cargo.toml  pyproject.toml  test_bindings.py
sdsforge_py/python/sdsconv/: __init__.py  causasv_bridge.py  eval.py  test_eval_coverage.py
sdsforge_py/python/sdsforge/: __init__.py  causasv_bridge.py  eval.py  test_eval_coverage.py
sdsforge_py/src/: lib.rs
sdsforge_server/: Cargo.toml
sdsforge_server/src/: main.rs
tasks/: lessons.md  todo.md
tools/: corpus_fetch.py  generate_schema.py  quality_check.py  roundtrip_diverse50.py  roundtrip_random30.py
