[workspace]
members = ["sdsconv_core", "sdsconv", "sdsconv_server"]
resolver = "2"

[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.42", features = ["rt-multi-thread", "macros", "time"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
anyhow = "1.0"
thiserror = "2.0"
tracing = "0.1"
