[workspace]
members = [
    "sdsforge_core", "sdsforge", "sdsforge_server", "sdsforge_py",
    # Deprecated compat shims — re-export/redirect to the sdsforge_* crates above.
    # See docs/migration-from-sdsconv.md.
    "sdsconv_core", "sdsconv",
]
resolver = "2"

[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.42", features = ["rt-multi-thread", "macros", "time"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
anyhow = "1.0"
thiserror = "2.0"
tracing = "0.1"
