[package]
name = "sds-converter"
version = "0.2.0"
edition = "2021"
description = "CLI for converting chemical safety SDS documents (PDF/DOCX) ↔ MHLW/JIS Z 7253 standard JSON via LLM (Claude/GPT/Gemini). Batch mode, multilingual."
license = "MIT OR Apache-2.0"
keywords = ["sds", "safety-data-sheet", "ghs", "llm", "cli"]
categories = ["command-line-utilities", "text-processing"]
readme = "README.md"
repository = "https://github.com/kent-tokyo/sds-converter"
homepage = "https://github.com/kent-tokyo/sds-converter"
documentation = "https://docs.rs/sds-converter"

[[bin]]
name = "sds-converter"
path = "src/main.rs"

[dependencies]
sds-converter-core = { path = "../sds_converter_core", version = "0.2" }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
clap = { version = "4.5", features = ["derive", "env"] }
walkdir = "2"
futures = "0.3"
reqwest = { workspace = true }
dirs = "5"
toml = "0.8"
indicatif = "0.17"
eframe = "0.29"
rfd = "0.14"
tempfile = "3"
