[package]
name = "sds-converter-core"
version = "0.1.0"
edition = "2021"
description = "Convert SDS documents (PDF/Word) ↔ MHLW standard JSON (JIS Z 7253 / GHS). Library + multilingual (ja/en/zh), pluggable LLM backend (Claude/GPT/Gemini)."
license = "MIT OR Apache-2.0"
keywords = ["sds", "safety-data-sheet", "ghs", "docx", "mhlw"]
categories = ["encoding", "parser-implementations", "text-processing"]
readme = "README.md"
repository = "https://github.com/kent-tokyo/sds-converter"
homepage = "https://github.com/kent-tokyo/sds-converter"
exclude = [
    "references/",
    "tools/",
    "tasks/",
    "CLAUDE.md",
    "*.pdf",
    "*.xlsx",
]

[lib]
name = "sds_converter_core"
path = "src/lib.rs"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
reqwest = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
pdf-extract = "0.8"
docx-rust = "0.1"
docx-rs = "0.4"
calamine = "0.26"

[dev-dependencies]
