[package]
name = "sds-converter-core"
version = "0.1.2"
edition = "2021"
description = "Convert chemical safety SDS documents (PDF/DOCX) ↔ MHLW/JIS Z 7253 standard JSON via LLM. Supports Claude, GPT, Gemini. Multilingual (ja/en/zh)."
license = "MIT OR Apache-2.0"
keywords = ["sds", "safety-data-sheet", "ghs", "llm", "docx"]
categories = ["encoding", "parser-implementations", "text-processing", "api-bindings"]
readme = "README.md"
repository = "https://github.com/kent-tokyo/sds-converter"
homepage = "https://github.com/kent-tokyo/sds-converter"
documentation = "https://docs.rs/sds-converter-core"
exclude = [
    "references/",
    "tools/",
    "tasks/",
    "CLAUDE.md",
    "*.pdf",
    "*.xlsx",
]

[lib]
name = "sds_converter_core"
path = "src/lib.rs"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
reqwest = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
pdf-extract = "0.8"
docx-rust = "0.1"
docx-rs = "0.4"
calamine = "0.26"
zip = "2"
scraper = "0.21"

[dev-dependencies]
