[package]
name = "sdsconv"
version = "0.2.8"
edition = "2021"
description = "CLI for converting chemical safety SDS documents (PDF/DOCX) ↔ MHLW/JIS Z 7253 standard JSON via LLM (Claude/GPT/Gemini). Batch mode, multilingual."
license = "MIT OR Apache-2.0"
keywords = ["sds", "safety-data-sheet", "ghs", "llm", "cli"]
categories = ["command-line-utilities", "text-processing"]
readme = "README.md"
repository = "https://github.com/kent-tokyo/sdsconv"
homepage = "https://github.com/kent-tokyo/sdsconv"
documentation = "https://docs.rs/sdsconv"

[[bin]]
name = "sdsconv"
path = "src/main.rs"

[dependencies]
sdsconv-core = { path = "../sdsconv_core", version = "0.3.8" }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
clap = { version = "4.5", features = ["derive", "env"] }
walkdir = "2"
futures = "0.3"
reqwest = { workspace = true }
dirs = "6"
toml = "1"
indicatif = "0.18"
eframe = "0.34"
rfd = "0.15"
tempfile = "3"
chrono = { version = "0.4", features = ["clock"] }
