[package]
name = "sdsconv"
version = "0.3.0"
edition = "2021"
description = "DEPRECATED: renamed to sdsforge. This package now only prints a redirect notice; install sdsforge instead."
license = "MIT OR Apache-2.0"
keywords = ["sds", "safety-data-sheet", "ghs", "llm", "cli"]
categories = ["command-line-utilities", "text-processing"]
readme = "README.md"
repository = "https://github.com/kent-tokyo/sdsconv"
homepage = "https://github.com/kent-tokyo/sdsconv"
documentation = "https://docs.rs/sdsforge"

[[bin]]
name = "sdsconv"
path = "src/main.rs"
