[package]
name = "sdsconv-core"
version = "0.3.8"
edition = "2021"
description = "Convert chemical safety SDS documents (PDF/DOCX) ↔ MHLW/JIS Z 7253 standard JSON via LLM. Supports Claude, GPT, Gemini. Multilingual (ja/en/zh)."
license = "MIT OR Apache-2.0"
keywords = ["sds", "safety-data-sheet", "ghs", "llm", "docx"]
categories = ["encoding", "parser-implementations", "text-processing", "api-bindings"]
readme = "README.md"
repository = "https://github.com/kent-tokyo/sdsconv"
homepage = "https://github.com/kent-tokyo/sdsconv"
documentation = "https://docs.rs/sdsconv-core"
exclude = [
    "references/",
    "tools/",
    "tasks/",
    "CLAUDE.md",
    "*.pdf",
    "*.xlsx",
]

[lib]
name = "sdsconv_core"
path = "src/lib.rs"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
reqwest = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
harumi = { version = "0.4", features = ["html"] }
base64 = "0.22"
pdf-extract = "0.10"
docx-rust = "0.1"
docx-rs = "0.4"
calamine = "0.35"
zip = "8"
scraper = "0.27"
tempfile = "3"

[dev-dependencies]
