[package]
name = "sdsconv-core"
version = "0.3.10"
edition = "2021"
description = "DEPRECATED: renamed to sdsforge-core. This crate re-exports sdsforge-core for compatibility and will be removed in a future release."
license = "MIT OR Apache-2.0"
keywords = ["sds", "safety-data-sheet", "ghs", "llm", "docx"]
categories = ["encoding", "parser-implementations", "text-processing", "api-bindings"]
readme = "README.md"
repository = "https://github.com/kent-tokyo/sdsforge"
homepage = "https://github.com/kent-tokyo/sdsforge"
documentation = "https://docs.rs/sdsconv-core"

[lib]
name = "sdsconv_core"
path = "src/lib.rs"

[dependencies]
sdsforge-core = { path = "../sdsforge_core", version = "0.5" }
