[build-system]
requires = ["maturin>=1.7,<2.0"]
build-backend = "maturin"

[project]
name = "sdsconv"
version = "0.1.0"
description = "Python bindings for sdsconv — SDS ↔ MHLW standard JSON converter"
requires-python = ">=3.9"
dependencies = ["pandas>=2", "tqdm>=4"]

[project.optional-dependencies]
analysis = ["causasv>=0.8.2", "scikit-learn>=1.3"]

[tool.maturin]
bindings = "pyo3"
module-name = "sdsconv._sdsconv"
python-source = "python"
strip = true
