[package]
name = "sdsforge-core"
version = "0.6.0"
edition = "2021"
description = "Generate, convert, validate, and render chemical safety data sheets using MHLW/JIS Z 7253 structured JSON, with evidence and provenance tracking."
license = "MIT OR Apache-2.0"
keywords = ["sds", "safety-data-sheet", "ghs", "llm", "docx"]
categories = ["encoding", "parser-implementations", "text-processing", "api-bindings"]
readme = "README.md"
repository = "https://github.com/kent-tokyo/sdsforge"
homepage = "https://github.com/kent-tokyo/sdsforge"
documentation = "https://docs.rs/sdsforge-core"
exclude = [
    "references/",
    "tools/",
    "tasks/",
    "CLAUDE.md",
    "*.pdf",
    "*.xlsx",
]

[lib]
name = "sdsforge_core"
path = "src/lib.rs"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
reqwest = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
sha2 = { workspace = true }
harumi = { version = "0.4", features = ["html"] }
base64 = "0.22"
pdf-extract = "0.10"
docx-rust = "0.1"
docx-rs = "0.4"
calamine = "0.35"
zip = { version = "8", default-features = false, features = ["deflate", "deflate64", "bzip2", "lzma", "ppmd", "time", "zstd", "xz"] }
scraper = "0.27"
tempfile = "3"
# Optional: chemical structure normalization (SMILES canonicalization,
# formula/charge/fragment consistency checks). Requires Rust 1.85 (chematic's
# own MSRV) — isolated behind the `chematic-normalization` feature so the
# default build's MSRV is unaffected. See sdsforge_core::normalize.
chematic = { version = "0.4.30", default-features = false, features = ["chem"], optional = true }

[features]
chematic-normalization = ["dep:chematic"]

[dev-dependencies]
wiremock = "0.6"
