[build-system]
requires = ["maturin>=1.7,<2.0"]
build-backend = "maturin"

[project]
name = "sdsconv"
version = "0.1.7"
description = "Python bindings for sdsconv — SDS ↔ MHLW standard JSON converter"
readme = { file = "../README.md", content-type = "text/markdown" }
license = { text = "MIT OR Apache-2.0" }
requires-python = ">=3.9"
keywords = ["sds", "mhlw", "ghs", "safety-data-sheet", "chemistry"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Rust",
    "Topic :: Scientific/Engineering :: Chemistry",
    "License :: OSI Approved :: MIT License",
    "License :: OSI Approved :: Apache Software License",
]
dependencies = ["pandas>=2", "tqdm>=4"]

[project.optional-dependencies]
analysis = ["causasv>=0.8.2", "scikit-learn>=1.3"]

[tool.maturin]
bindings = "pyo3"
module-name = "sdsconv._sdsconv"
python-source = "python"
strip = true
